--- a/supplier-invoice-page.html
+++ b/supplier-invoice-page.html
@@ -46,7 +46,7 @@
         <div class="top-container">
 			<div class="nav-bar-window">
 				<div class="navigation-buttons">
-					<button class="nav-button-circle"   onclick="location.href='john-invoices.html';">&#8249;</button>
+					<button class="nav-button-circle"   onclick="location.href='supplier-invoices.html';">&#8249;</button>
 					<button class="nav-button-circle2">&#8250;</button>
 				</div>
 				<h2 class="window-head">Decibel - INV-00001</h2>
