--- a/supplier-invoices.html
+++ b/supplier-invoices.html
@@ -9,7 +9,7 @@
 	<script src="navbar.js" defer></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.6.2/fetch.min.js"></script>
 	
-    <title>Approvals Layout</title>
+    <title>Supplier Management</title>
 	
 
 	
@@ -47,7 +47,7 @@
 						<div class="top-container">
 							<div class="nav-bar-window">
 								<div class="navigation-buttons">
-									<button class="nav-button-circle"   onclick="location.href='crew-management-review.html';">&#8249;</button>
+									<button class="nav-button-circle"   onclick="location.href='supplier-management-review.html';">&#8249;</button>
 									<button class="nav-button-circle">&#8250;</button>
 								</div>
 								<h2 class="window-head">Decibel - Invoices</h2>
